Bug 316281 - Ctrl+S shortcut is broken
Summary: Ctrl+S shortcut is broken
Status: RESOLVED FIXED
Alias: None
Product: Plasma SDK
Classification: Plasma
Component: General (other bugs)
Version First Reported In: 1.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-07 06:09 UTC by Tianyu Zhu
Modified: 2013-03-23 16:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tianyu Zhu 2013-03-07 06:09:56 UTC
Trying to save a project by pressing Ctrl+S does not work because the "key sequence is ambiguous." On closer inspection, the Kate part "Save" action conflicts with the Plasmate "Create Save Point" action.
Changing the shortcut for either action doesn't seem to solve the problem. However, setting the shortcut for both actions to "None" makes Ctrl+S perform a "Save As" operation.

Reproducible: Always

Steps to Reproduce:
1. Open a project
2. Press "Ctrl+S"

Actual Results:  
A popup appears stating that "The key sequence is ambiguous".

Expected Results:  
The "Create Save Point" action, or whatever action is mapped to Ctrl+S
Comment 1 Giorgos Tsiapaliokas 2013-03-07 11:23:21 UTC
this isn't a bug.

in plasmate we don't use the ctrl+s for save, every time
that you close your project or when you click the refresh button
in the previewer the project is saved automatically.
Comment 2 Tianyu Zhu 2013-03-07 13:45:13 UTC
If Ctrl+S is really not used in Plasmate, then pressing it shouldn't activate any actions.
However, it is assigned, by default, to two actions. One of them is the plasmate action "Create Save Point".

If Ctrl+S shouldn't be used in Plasmate, the somehow, the shortcut should be removed by default.
Comment 3 Jekyll Wu 2013-03-07 16:12:17 UTC
I agree with Tianyu Zhu.  One ambiguous shortcut (by default) imposes very bad impression to users. Either assigned a different one or just "None" by default.
Comment 4 Giorgos Tsiapaliokas 2013-03-20 16:02:53 UTC
Git commit a0be9b139c56567d5541571ffd843a140eab3de2 by Giorgos Tsiapaliokas.
Committed on 11/03/2013 at 14:15.
Pushed by tsiapaliwkas into branch 'terietor/BUG/316281'.

Remove the save and save_as actions completely.
This way we make it more future proof, check for
instance this bug.
REVIEW: 109501

M  +12   -1    plasmate/editors/text/texteditor.cpp
M  +2    -4    plasmate/editors/text/texteditor.h

http://commits.kde.org/plasmate/a0be9b139c56567d5541571ffd843a140eab3de2