Remove the save and save_as actions completely. This way we make it more future proof, check for instance this bug.

BUG: 316281
REVIEW: 109501